--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     compile group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.4.0'
     compileOnly 'org.projectlombok:lombok'
