--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,8 @@ spring:
   logging:
     level:
       org.hibernate.SQL: debug
+
+  servlet:
+    multipart:
+      max-request-size: 20MB
+      max-file-size: 20MB
